--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mongoose": "^5.5.12",
     "@types/passport": "^1.0.0",
+    "@types/passport-google-oauth20": "^2.0.2",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
@@ -22,7 +24,7 @@
     "mongoose": "^5.6.8",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "nodemonConfig": {
     "ignore": [
